[package]
name = "easy-lg"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[workspace]
members = ["complex"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["visit", "full", "visit-mut", "extra-traits"] }
